syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/pkgs/crypto/hd/pb";

// messages
message Bip44Params {
	uint32 Purpose = 1;
	uint32 CoinType = 2;
	uint32 Account = 3;
	bool Change = 4;
	uint32 AddressIndex = 5;
}